Added generate endpoint and generate ToLIDs
